@@ -58,6 +58,9 @@
    - mouring@cvs.openbsd.org 2001/07/29 17:02:46
      [scp.1]
      Clarified -o option in scp.1  OKed by Markus@
+   - jakob@cvs.openbsd.org 2001/07/30 16:06:07
+     [scard.c scard.h]
+     better errorcodes from sc_*; ok markus@
 
 20010803
  - (djm) Fix interrupted read in entropy gatherer. Spotted by markus@ on
@@ -6168,4 +6171,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1442 2001/08/06 21:20:22 mouring Exp $
+$Id: ChangeLog,v 1.1443 2001/08/06 21:22:10 mouring Exp $
